	* Fixed Shadow Shifter and Guardian crashing the map when activated.
	* Fixed Ninja Ambush, Threaten, Slow, Seal, Doom, and Shadow Web crashing
	the map when cast.
	* Fixed Meso Guard not working.

2013-02-19  GoldenKevin  (revision 203)

	* Added support for blacklisting certain MAC addresses from being added to
	the `macbans` table if the MAC address is likely to be duplicated on
	multiple clients.

2013-02-27  GoldenKevin  (revision 204)

	* Fixed Chaos scrolls.
	* Moved !jail, !unjail, and !ban commands from CommandProcessor into
	DisciplinaryCommandHandlers.
	* Added !kick command.

2013-02-27  GoldenKevin  (revision 205)

	* Fixed mastery missing for magic skills if not equipped with wand or staff.
	* Moved all monster elemental resistance and makeChanceResult logic for mob
	status effects to MonsterStatusEffectTools.
	* Fixed Poison Mist expiring immediately.
	* Fixed one damage mob poison shown on client and no damage on server.
	* Fixed Venomous Star and Venomous Stab.

2013-03-03  GoldenKevin  (revision 206)

	* Patched packet editing negative mesos when trading or dropping.
	* Patched packet editing quest rewards when starting or completing quest.
	* Fixed QuestRewards.giveRewards giving completion rewards from Strange Dish
	2 when starting Strange Dish 3.
	* All Throwables (not just SQLExceptions) will be caught when auto-commit is
	disabled, and Connection.rollback will be called whenever Connection.commit
	failed or was not yet called so that pooled Connections will always be at a
	clean state.
	* Partially resolved issues that arise when
	CrossServerSynchronization.sendPartyMemberLogOffNotifications,
	CrossServerSynchronization.sendGuildMemberLogOffNotifications, and
	CrossServerSynchronization.sendLeaveChatroom are called in
	GameCharacter.prepareLogOff.

Copyright 2011-2013 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.