@@ -262,6 +262,7 @@ public final class Skills {
 		GRENADE = 5201002,
 		GUN_BOOSTER = 5201003,
 		BLANK_SHOT = 5201004,
+		WINGS = 5201005,
 
 		OCTOPUS = 5211001,
 		GAVIOTA = 5211002,
