@@ -48,6 +48,18 @@ public final class MobSkills {
 		CRAZY_SKULL = 132, //Ariant Coliseum
 		PHYSICAL_IMMUNITY = 140,
 		MAGIC_IMMUNITY = 141,
+		ARMOR = 142,
+		PHYSICAL_REFLECT = 143,
+		MAGIC_REFLECT = 144, 
+		ALL_REFLECT = 145,
+		MONSTER_CARNIVAL_WATK_UP = 150,
+		MONSTER_CARNIVAL_MATK_UP = 151,
+		MONSTER_CARNIVAL_WDEF_UP = 152,
+		MONSTER_CARNIVAL_MDEF_UP = 153,
+		MONSTER_CARNIVAL_ACC_UP = 154,
+		MONSTER_CARNIVAL_EVA_UP = 155,
+		MONSTER_CARNIVAL_SPEED_UP = 156,
+		MONSTER_CARNIVAL_SEAL = 157,
 		SUMMON = 200
 	;
 
